--- a/balls1.html
+++ b/balls1.html
@@ -25,29 +25,51 @@ properties of objects, update the draw-a-ball function to take the object as arg
     var canvas = document.getElementById('canvas');
     var ctx = canvas.getContext('2d');
 
+    function Ball(x, y, radius, color) {
+      this.x = x;
+      this.y = y;
+      this.radius = radius;
+      this.color = color;
+    }
+
     // attributes for ball 1
-    var x1 = 100;
-    var y1 = 100;
-    var radius1 = 10;
-    var color1 = 'red';
+    var ball1 = new Ball(100, 100, 10, 'red');
+    // var x1 = 100;
+    // var y1 = 100;
+    // var radius1 = 10;
+    // var color1 = 'red';
 
     // attributes for ball 2
-    var x2 = 300;
-    var y2 = 400;
-    var radius2 = 30;
-    var color2 = 'green';
-    function main() {
-      // draw ball 1
+    var ball2 = new Ball(300, 400, 30, 'green');
+    // var x2 = 300;
+    // var y2 = 400;
+    // var radius2 = 30;
+    // var color2 = 'green';
+
+
+
+    function drawBall(ball) {
       ctx.beginPath();
-      ctx.fillStyle = color1;
-      ctx.ellipse(x1, y1, radius1, radius1, 0, 0, Math.PI * 2);
+      ctx.fillStyle = ball.color;
+      ctx.ellipse(ball.x, ball.y, ball.radius, ball.radius, 0, 0, Math.PI * 2);
+      // ctx.ellipse(x1, y1, radius1, radius1, 0, 0, Math.PI * 2);
       ctx.fill();
+    }
+
+    function main() {
+      drawBall(ball1);
+      drawBall(ball2);
+      // draw ball 1
+      // ctx.beginPath();
+      // ctx.fillStyle = color1;
+      // ctx.ellipse(x1, y1, radius1, radius1, 0, 0, Math.PI * 2);
+      // ctx.fill();
 
       // draw ball 2
-      ctx.beginPath();
-      ctx.fillStyle = color2;
-      ctx.ellipse(x2, y2, radius2, radius2, 0, 0, Math.PI * 2);
-      ctx.fill();
+      // ctx.beginPath();
+      // ctx.fillStyle = color2;
+      // ctx.ellipse(x2, y2, radius2, radius2, 0, 0, Math.PI * 2);
+      // ctx.fill();
 
       // continue the loop
       requestAnimationFrame(main);
